--- a/src/sefarad.html
+++ b/src/sefarad.html
@@ -2,16 +2,6 @@
 <html lang="es">
 	<!-- head starts -->
 	<head>
-		<script type="text/javascript" src="js/widgets/stockWidget.js"></script>
-		<script type="text/javascript" src="js/widgets/widgetBarras.js"></script>
-		<script type="text/javascript" src="js/widgets/widgetD3.js"></script>
-		<script type="text/javascript" src="js/widgets/widgetDonuts.js"></script>
-		<script type="text/javascript" src="js/widgets/widgetMap.js"></script>
-		<script type="text/javascript" src="js/widgets/widgetSortBar.js"></script>
-		<script type="text/javascript" src="js/widgets/widgetWheel.js"></script>
-		<script type="text/javascript">
-			var widgetX = [stockWidget, widgetBarras, widgetD3, widgetDonuts, widgetMap, widgetSortBar, widgetWheel];
-		</script>
 		<meta charset="utf-8" />
 		<title>SEFARAD</title>
 		<!-- global stylesheets -->
@@ -45,7 +35,7 @@
 		<script type="text/javascript" charset="UTF-8" src="js/charts_configuration.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="js/lang.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="js/default_configuration.js"></script>
-		<script type="text/javascript" charset="UTF-8" src="js/wizards.js"></script>
+		<script type="text/javascript" charset="UTF-8" src="js/ext/wizards.js"></script>
 		<!-- graphics -->
 		<script type="text/javascript" charset="UTF-8" src="js/ext/highcharts.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="js/ext/grid.js"></script>
@@ -62,9 +52,9 @@
 		<script type="text/javascript" charset="UTF-8" src="ajax-solr/core/AbstractFacetWidget.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="ajax-solr/core/AbstractParamWidget.js"></script>
 		<!-- widgets -->
-		<script type="text/javascript" charset="UTF-8" src="widgets/AutocompleteWidget.js"></script>
-		<script type="text/javascript" charset="UTF-8" src="widgets/PagerWidget.js"></script>
-		<script type="text/javascript" charset="UTF-8" src="widgets/ResultWidget.2.0.js"></script>
+		<script type="text/javascript" charset="UTF-8" src="js/widgets/ext/AutocompleteWidget.js"></script>
+		<script type="text/javascript" charset="UTF-8" src="js/widgets/ext/PagerWidget.js"></script>
+		<script type="text/javascript" charset="UTF-8" src="js/widgets/ext/ResultWidget.2.0.js"></script>
 		<!-- other -->
 		<script type="text/javascript" charset="UTF-8" src="js/ext/sammy-latest.min.js"></script>
 		<script src="js/ext/jquery.isotope.min.js"></script>
@@ -73,7 +63,7 @@
 		<!-- external -->
 		<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
 		<link rel="stylesheet" type="text/css" href="http://knockoutjs.com/examples/resources/twitterExample.css">
-		<script type='text/javascript' src="js/twitterApi.js"></script>
+		<script type='text/javascript' src="js/ext/twitterApi.js"></script>
 		<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDY0kkJiTPVd2U7aTOAwhc9ySH6oHxOIYM&sensor=false"></script>
 
 		<script type="text/javascript" charset="UTF-8">
