--- a/src/knockout_templates/templates.html
+++ b/src/knockout_templates/templates.html
@@ -194,8 +194,8 @@
 
 					<div class="ui-widget-content" data-bind="visible: !collapsed()">
 
-						<div data-bind="fadeVisible: showWidgetHelp">
-							<a data-bind="text: help"></a>
+						<div class="widget-help" data-bind="fadeVisible: showWidgetHelp">
+							<div data-bind="text: help"></div>
 						</div>
 
 						<!-- Slider widget -->
