--- a/src/knockout_templates/templates.html
+++ b/src/knockout_templates/templates.html
@@ -190,6 +190,7 @@
 								$root.deleteWidget.bind($data, id(), type()), visible: $root.adminMode"></div>
 						<div class="ui-icon ui-icon-help" style="float:right" data-bind="visible: $root.adminMode, click: 
 							function(){showWidgetHelp(!showWidgetHelp());}"></div>
+						<div id="content" style="float:right"><a href="#">i </a></div>
 					</div>
 
 					<div class="ui-widget-content" data-bind="visible: !collapsed()">
