accordion layout improvement

--- a/src/knockout_templates/templates.html
+++ b/src/knockout_templates/templates.html
@@ -267,7 +267,21 @@
 		</script>
 		<script id="widgets-template-accordion" type="text/html">
 			<div >
-				{{if type()=="radialgauge"}}
+				{{if type()=="tagcloud"}}
+					<div >									
+						{{if layout()=="vertical"}}							
+							<ul data-bind="kendoPanelBar: { }">
+								<li>
+									<span class="filterName" data-bind="text: title()"></span>	
+									<ul data-bind="template: {name: 'widget-template-panelbar', foreach: $data.values }"></ul>
+								</li>
+							</ul>
+						{{else}}						
+							<div class="tagarea"><div data-bind="template: { name: 'widget-template-tagcloud', templateOptions: {parent_id: id 
+								},foreach: values }"></div></div>			
+						{{/if}}
+					</div>
+				{{else type()=="radialgauge"}}
 					<div id="gauge-container">
 						<div id="gauge" data-bind="kendoRadialGauge: {value: $root.numberOfResults, scale: { max: 
 							$root.getMaxNumberOfResults(), labels: { visible: true }, majorUnit: $root.getGaugeMajorUnits() } } "></div>
@@ -275,6 +289,8 @@
 							<p data-bind="text: $root.numberOfResults"></p>
 						</div>
 					</div>
+				{{else}}
+					<div data-bind="attr: { 'id': id }"></div>
 				{{/if}}
 			</div>			
 		</script>	
