--- a/src/knockout_templates/templates.html
+++ b/src/knockout_templates/templates.html
@@ -175,32 +175,6 @@
 				<div class="tagarea"><div data-bind="template: { name: 'widget-template-tagcloud', templateOptions: {parent_id: id 
 					},foreach: values }"></div></div>			
 			{{/if}}
-
-			<!-- Accordion widget -->
-			{{else type()=="accordion"}}
-			<li class="ui-widget">
-			<div class="ui-widget-header">
-				<div style="float:left">
-					<div class="ui-icon" data-bind="css: {'ui-icon-arrow-1-s': collapsed(), 'ui-icon-arrow-1-n': !collapsed()}, click: $root.collapseWidget"></div>
-				</div>
-				<h3><a href="#" data-bind="text: title, click: function() { $root.editTitle($data); }, visible: $data !== $root.editingTitle()"></a></h3>
-				<input data-bind="value: title, visibleAndSelect: $data === $root.editingTitle(), event: { blur: function() { $root.editTitle(''); } }"/>
-				<div style="display:inline-block; float: right;">
-					<div style="float: right;" class="ui-icon ui-icon-trash" data-bind="click: $root.deleteWidget.bind($data, id(), type()), visible: 
-						$root.adminMode"></div>
-					<div class="ui-icon ui-icon-gear" style="float: right;" data-bind="visible: $root.adminMode, click: 
-						function(){showWidgetConfiguration(!showWidgetConfiguration());}"></div>
-					<div id='qtip-help' class="ui-icon ui-icon-help" style="float:right" data-bind="attr: {'help-text': $root.lang().tagCloudHelp }"></div>
-				</div>
-			</div>
-			<div class="ui-widget-content" data-bind="visible: !collapsed()">			
-				<div class="widget-configuration" data-bind="fadeVisible: showWidgetConfiguration">
-					<p>Seleccione un nuevo campo</p>					
-				</div>
-				<div class="tagarea">
-					<div data-bind="template: { name: 'widget-template-tagcloud', templateOptions: {parent_id: id },foreach: values }"></div>
-				</div>
-			</div>
 			
 			<!-- Other widget -->
 			{{else}}
@@ -281,6 +255,10 @@
 								},foreach: values }"></div></div>			
 						{{/if}}
 					</div>
+				{{else type()=="resultstats"}}
+					<div >
+						<div class="graphics"></div>
+					</div>
 				{{else type()=="radialgauge"}}
 					<div id="gauge-container">
 						<div id="gauge" data-bind="kendoRadialGauge: {value: $root.numberOfResults, scale: { max: 
@@ -288,6 +266,12 @@
 						<div id="contador">
 							<p data-bind="text: $root.numberOfResults"></p>
 						</div>
+					</div>
+				{{else type()=="slider"}}
+					<div class="slider"></br>
+						<span>Rango filtrado: </span>
+						<span data-bind="text: values"></span>
+						<div data-bind="slider: $data, sliderOptions: {min: $data.limits()[0], max: $data.limits()[1], values: $data.values(), step: $data.value()}"></div></br>
 					</div>
 				{{else}}
 					<div data-bind="attr: { 'id': id }"></div>
