--- a/src/knockout_templates/templates.html
+++ b/src/knockout_templates/templates.html
@@ -362,6 +362,9 @@
 					<h2 data-bind="text: $data.name"></h2>
 					<p data-bind="text: $data.description"></p>
 					<a href="#" data-bind="click: $data.render"><button class="button">Añadir</button></a>
+                    <!--
+                    <a href="#" data-bind="click: vm.addWidget($data)"><button class="button">Añadir</button></a>
+                    -->
 				</div>
 			</div>
 		</script>
