New filter system ready. Various widgets of the same type option added.

--- a/src/knockout_templates/templates.html
+++ b/src/knockout_templates/templates.html
@@ -361,7 +361,7 @@
 				<div class="mask">
 					<h2 data-bind="text: $data.name"></h2>
 					<p data-bind="text: $data.description"></p>
-					<a href="#" data-bind="click: $data.render"><button class="button">Añadir</button></a>
+					<a href="#" data-bind="click: $data.create"><button class="button">Añadir</button></a>
                     <!--
                     <a href="#" data-bind="click: vm.addWidget($data)"><button class="button">Añadir</button></a>
                     -->
