--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="content-type" content="text/html; charset=UTF8">
     <title>Sefarad 2.0 | Search</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
@@ -26,6 +26,8 @@
           type="text/css"/>
     <!-- OpenLayers style -->
     <link rel="stylesheet" href="http://openlayers.org/en/v3.2.0/css/ol.css" type="text/css">
+    <!-- dc style -->
+    <link rel="stylesheet" type="text/css" href="./css/dc.css" media="screen" />
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -43,6 +45,10 @@
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <!--sparql-geojson plugin-->
     <script src="js/plugins/sparql-geojson.js" charset="utf-8"></script>
+    <!--crossfilter.js-->
+    <script type="text/javascript" src="https://rawgithub.com/NickQiZhu/dc.js/master/web/js/crossfilter.js"></script>
+    <!--dc.js-->
+    <script type="text/javascript" src="js/plugins/dc.js"></script>
 
 
 </head>
@@ -398,6 +404,67 @@
         <div class="row">
             <!-- Left col -->
             <section class="col-lg-7 connectedSortable">
+
+
+                <!-- Custom dc widget graph-->
+                <div id="crossFilterDCTest" class="box box-primary">
+                    <div class="box-header">
+                        <h3 class="box-title">CrossFilter + dc.js</h3>
+                    </div>
+                    <!-- box-body -->
+                    <div class="box-body chart-responsive">
+                        <div id="chart-line-hitsperday"></div>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+                <!-- /.Custom dc widget graph-->
+
+                <!-- Custom dc widget donnut-->
+                <div id="crossFilterDCTest2" class="box box-primary">
+                    <div class="box-header">
+                        <h3 class="box-title">CrossFilter + dc.js  2</h3>
+                    </div>
+                    <!-- box-body -->
+                    <div class="box-body chart-responsive">
+                        <div id="chart-ring-year"></div>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+                <!-- /.Custom dc widget donnut-->
+
+                <!-- Custom dc widget table-->
+                <div id="crossFilterDCTest3" class="box box-primary">
+                    <div class="box-header">
+                        <h3 class="box-title">CrossFilter + dc.js (table)</h3>
+                    </div>
+                    <!-- box-body -->
+                    <div class="box-body chart-responsive">
+                        <button id="makeDataTable">Click to fill the data table with the filtered data</button>
+
+                        <table class="table table-hover dc-data-table">
+                            <thead>
+                            <tr class="header">
+                                <th>Day</th>
+                                <th>TPS 200</th>
+                                <th>TPS 302</th>
+                                <th>TPS Total</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+
+                            </tbody>
+
+                            <tfoot>
+
+                            </tfoot>
+                        </table>
+
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+                <!-- /.Custom dc widget table-->
+
+
 
                 <!-- Custom map widget-->
                 <div id="openLayersMapWidget" class="box box-solid bg-light-blue-gradient">
