dc.js test with slovakian datasource. It works for one dimension. interdimensional filter test in progress

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                 <!-- /.Custom dc widget graph-->
 
                 <!-- Custom dc widget donnut-->
-                <div id="crossFilterDCTest2" class="box box-primary">
+                <div id="crossFilterDCTest2" class="box box-solid bg-navy">
                     <div class="box-header">
                         <h3 class="box-title">CrossFilter + dc.js  2</h3>
                     </div>
