WIP selectFilter Map almost integrated in dc

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- dc style -->
     <link rel="stylesheet" type="text/css" href="./css/dc.css" media="screen" />
     <!-- leaflet style -->
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <link rel="stylesheet" href="./css/leaflet.css" />
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -53,6 +53,9 @@
     <script type="text/javascript" src="js/plugins/dc.js"></script>
     <!--leaflet.js-->
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    <!--leaflet-dc.js-->
+    <script type="text/javascript" src="js/plugins/dc.leaflet.js"></script>
+
 
 
 </head>
@@ -399,6 +402,8 @@
     <!-- Main content -->
     <section class="content">
 
+
+
         <!-- Small boxes (Stat box) -->
         <div class="row">
         </div>
@@ -408,6 +413,8 @@
         <div class="row">
             <!-- Left col -->
             <section class="col-lg-7 connectedSortable">
+
+
 
 
                 <!-- Custom dc widget graph-->
