Map dc integration completed with popups - speed increase and popup fix

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!--leaflet.js-->
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <!--leaflet-dc.js-->
-    <script type="text/javascript" src="js/plugins/dc.leaflet.js"></script>
+    <script type="text/javascript" src="js/plugins/dc.leaflet.custom.js"></script>
 
 
 
