Dc - crossfilter release

--- a/index.html
+++ b/index.html
@@ -430,148 +430,19 @@
 
 
                 <!-- Custom dc widget graph-->
-                <div id="polymerBasicTest" class="box box-primary">
-                    <div class="box-header">
-                        <h3 class="box-title">Polymer basic example</h3>
-                    </div>
-                    <!-- box-body -->
-                    <div class="box-body chart-responsive">
-                        <my-element></my-element>
-                        <my-element></my-element>
-                        <dc-element></dc-element>
-                    </div>
-                    <!-- /.box-body -->
-                </div>
+                <!--<div id="polymerBasicTest" class="box box-primary">-->
+                    <!--<div class="box-header">-->
+                        <!--<h3 class="box-title">Polymer basic example</h3>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash; box-body &ndash;&gt;-->
+                    <!--<div class="box-body chart-responsive">-->
+                        <!--<my-element></my-element>-->
+                        <!--<my-element></my-element>-->
+                        <!--<dc-element></dc-element>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                <!--</div>-->
                 <!-- /.Custom dc widget graph-->
-
-                <!-- Custom dc widget donnut-->
-                <div id="crossFilterDCTest2" class="box box-solid bg-navy">
-                    <div class="box-header">
-                        <h3 class="box-title">CrossFilter + dc.js : designation filter</h3>
-                    </div>
-                    <!-- box-body -->
-                    <div class="box-body chart-responsive">
-                        <div id="chart-ring-year"></div>
-                    </div>
-                    <!-- /.box-body -->
-                </div>
-                <!-- /.Custom dc widget donnut-->
-
-                <!-- Custom dc widget donnut-->
-                <div id="crossFilterDCTest4" class="box box-solid bg-navy">
-                    <div class="box-header">
-                        <h3 class="box-title">CrossFilter + dc.js : name filter</h3>
-                    </div>
-                    <!-- box-body -->
-                    <div class="box-body chart-responsive">
-                        <div id="chart-ring-name"></div>
-                    </div>
-                    <!-- /.box-body -->
-                </div>
-                <!-- /.Custom dc widget donnut-->
-
-                <!-- Custom dc widget table-->
-                <div id="crossFilterDCTest3" class="box box-primary">
-                    <div class="box-header">
-                        <h3 class="box-title">CrossFilter + dc.js (table)</h3>
-                    </div>
-                    <!-- box-body -->
-                    <div class="box-body chart-responsive">
-                        <button id="makeDataTable">Click to fill the data table with the filtered data</button>
-
-                        <table class="table table-hover dc-data-table">
-                            <thead>
-                            <tr class="header">
-                                <th>Day</th>
-                                <th>TPS 200</th>
-                                <th>TPS 302</th>
-                                <th>TPS Total</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-
-                            </tbody>
-
-                            <tfoot>
-
-                            </tfoot>
-                        </table>
-
-                    </div>
-                    <!-- /.box-body -->
-                </div>
-                <!-- /.Custom dc widget table-->
-
-
-
-                <!-- Custom map widget-->
-                <div id="openLayersMapWidget" class="box box-solid bg-light-blue-gradient">
-                    <div class="box-header">
-                        <i class="fa fa-map-marker"></i>
-
-                        <h3 class="box-title">Map</h3>
-                    </div>
-                    <!-- box-body -->
-                    <div class="box-body chart-responsive">
-                        <div class="mapdiv" id="mapDiv" style="width: 100%; height: 300px;">
-
-                        </div>
-                    </div>
-                    <!-- /.box-body -->
-                    <style>
-                        #mapdiv {
-                            width: 350px;
-                            height: 250px;
-                        }
-
-                        div.olControlAttribution {
-                            bottom: 3px;
-                        }
-                    </style>
-                </div>
-                <!-- /.Custom map widget-->
-
-
-                <!-- Custom results table widget-->
-                <div id="resultsWidget" class="box box-primary">
-                    <div class="inf box-header">
-                        <h3 class="box-title">Results Table</h3>
-                    </div>
-                    <!-- box-body -->
-                    <div class="box-body chart-responsive">
-                        <div class="box-body border-radius-none table-responsive" id="resultsDiv">
-
-                        </div>
-                    </div>
-                    <!-- /.box-body -->
-                </div>
-                <!-- /.Custom results table widget-->
-
-
-                <!-- Faceted Search Results-->
-                <div class="box box-solid bg-aqua hide">
-                    <div class="box-header ui-sortable-handle" style="cursor: move;">
-                        <i class="fa fa-th"></i>
-
-                        <h3 class="box-title">Results</h3>
-
-                        <div class="box-tools pull-right">
-                            <!--<button class="btn bg-teal btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>-->
-                            <!--<button class="btn bg-teal btn-sm" data-widget="remove"><i class="fa fa-times"></i></button>-->
-                        </div>
-                    </div>
-                    <div class="box-body border-radius-none">
-                        <div class="box-body border-radius-none" id="results"></div>
-                    </div>
-                    <!-- /.box-body -->
-                </div>
-                <!-- /.Faceted Search Results -->
-
-
-            </section>
-            <!-- /.Left col -->
-            <!-- right col (We are only adding the ID to make the widgets sortable)-->
-            <section class="col-lg-5 connectedSortable">
 
                 <!-- Custom leaflet map widget-->
                 <div id="leafletMapWidget" class="box box-primary">
@@ -586,37 +457,169 @@
                 </div>
                 <!-- /.Custom leaflet map widget-->
 
-                <!-- Custom Faceted Search widget-->
-                <div id="facetedSearchWidget" class="box box-solid bg-aqua-gradient">
-                    <div class="box-header ui-sortable-handle" style="cursor: move;">
-                        <i class="fa fa-th"></i>
 
-                        <h3 class="box-title">Faceted Search</h3>
+                <!-- Custom dc widget table-->
+                <!--<div id="crossFilterDCTest3" class="box box-primary">-->
+                    <!--<div class="box-header">-->
+                        <!--<h3 class="box-title">CrossFilter + dc.js (table)</h3>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash; box-body &ndash;&gt;-->
+                    <!--<div class="box-body chart-responsive">-->
+                        <!--<button id="makeDataTable">Click to fill the data table with the filtered data</button>-->
 
-                        <div class="box-tools pull-right">
-                            <!--<button class="btn bg-teal btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>-->
-                            <!--<button class="btn bg-teal btn-sm" data-widget="remove"><i class="fa fa-times"></i></button>-->
-                        </div>
-                    </div>
-                    <div class="box-body border-radius-none">
-                        <div class="box-body border-radius-none" id="facets"></div>
-                    </div>
-                    <!-- /.box-body -->
-                </div>
-                <!-- /.Custom Faceted Search widget-->
+                        <!--<table class="table table-hover dc-data-table">-->
+                            <!--<thead>-->
+                            <!--<tr class="header">-->
+                                <!--<th>Day</th>-->
+                                <!--<th>TPS 200</th>-->
+                                <!--<th>TPS 302</th>-->
+                                <!--<th>TPS Total</th>-->
+                            <!--</tr>-->
+                            <!--</thead>-->
+                            <!--<tbody>-->
 
-                <!-- Custom donnut chart widget-->
-                <div id="donnutChartWidget" class="box box-primary">
+                            <!--</tbody>-->
+
+                            <!--<tfoot>-->
+
+                            <!--</tfoot>-->
+                        <!--</table>-->
+
+                    <!--</div>-->
+                    <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                <!--</div>-->
+                <!-- /.Custom dc widget table-->
+
+
+
+                <!-- Custom map widget-->
+                <!--<div id="openLayersMapWidget" class="box box-solid bg-light-blue-gradient">-->
+                    <!--<div class="box-header">-->
+                        <!--<i class="fa fa-map-marker"></i>-->
+
+                        <!--<h3 class="box-title">Map</h3>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash; box-body &ndash;&gt;-->
+                    <!--<div class="box-body chart-responsive">-->
+                        <!--<div class="mapdiv" id="mapDiv" style="width: 100%; height: 300px;">-->
+
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                    <!--<style>-->
+                        <!--#mapdiv {-->
+                            <!--width: 350px;-->
+                            <!--height: 250px;-->
+                        <!--}-->
+
+                        <!--div.olControlAttribution {-->
+                            <!--bottom: 3px;-->
+                        <!--}-->
+                    <!--</style>-->
+                <!--</div>-->
+                <!-- /.Custom map widget-->
+
+
+                <!-- Custom results table widget-->
+                <!--<div id="resultsWidget" class="box box-primary">-->
+                    <!--<div class="inf box-header">-->
+                        <!--<h3 class="box-title">Results Table</h3>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash; box-body &ndash;&gt;-->
+                    <!--<div class="box-body chart-responsive">-->
+                        <!--<div class="box-body border-radius-none table-responsive" id="resultsDiv">-->
+
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                <!--</div>-->
+                <!-- /.Custom results table widget-->
+
+
+                <!-- Faceted Search Results-->
+                <!--<div class="box box-solid bg-aqua hide">-->
+                    <!--<div class="box-header ui-sortable-handle" style="cursor: move;">-->
+                        <!--<i class="fa fa-th"></i>-->
+
+                        <!--<h3 class="box-title">Results</h3>-->
+
+                        <!--<div class="box-tools pull-right">-->
+                            <!--&lt;!&ndash;<button class="btn bg-teal btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<button class="btn bg-teal btn-sm" data-widget="remove"><i class="fa fa-times"></i></button>&ndash;&gt;-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="box-body border-radius-none">-->
+                        <!--<div class="box-body border-radius-none" id="results"></div>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                <!--</div>-->
+                <!-- /.Faceted Search Results -->
+
+
+            </section>
+            <!-- /.Left col -->
+            <!-- right col (We are only adding the ID to make the widgets sortable)-->
+            <section class="col-lg-5 connectedSortable">
+
+
+
+                <!-- Custom dc widget donnut-->
+                <div id="crossFilterDCTest2" class="box bg-aqua-gradient">
                     <div class="box-header">
-                        <h3 class="box-title">Donut Chart</h3>
+                        <h3 class="box-title">CrossFilter + dc.js : designation filter</h3>
                     </div>
                     <!-- box-body -->
                     <div class="box-body chart-responsive">
-                        <div class="box-body border-radius-none" id="chartDiv"></div>
-
+                        <div id="chart-ring-year"></div>
                     </div>
                     <!-- /.box-body -->
                 </div>
+                <!-- /.Custom dc widget donnut-->
+
+                <!-- Custom dc widget donnut-->
+                <div id="crossFilterDCTest4" class="box bg-aqua-gradient">
+                    <div class="box-header">
+                        <h3 class="box-title">CrossFilter + dc.js : name filter</h3>
+                    </div>
+                    <!-- box-body -->
+                    <div class="box-body chart-responsive">
+                        <div id="chart-ring-name"></div>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+                <!-- /.Custom dc widget donnut-->
+
+                <!-- Custom Faceted Search widget-->
+                <!--<div id="facetedSearchWidget" class="box box-solid bg-aqua-gradient">-->
+                    <!--<div class="box-header ui-sortable-handle" style="cursor: move;">-->
+                        <!--<i class="fa fa-th"></i>-->
+
+                        <!--<h3 class="box-title">Faceted Search</h3>-->
+
+                        <!--<div class="box-tools pull-right">-->
+                            <!--&lt;!&ndash;<button class="btn bg-teal btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<button class="btn bg-teal btn-sm" data-widget="remove"><i class="fa fa-times"></i></button>&ndash;&gt;-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="box-body border-radius-none">-->
+                        <!--<div class="box-body border-radius-none" id="facets"></div>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                <!--</div>-->
+                <!-- /.Custom Faceted Search widget-->
+
+                <!-- Custom donnut chart widget-->
+                <!--<div id="donnutChartWidget" class="box box-primary">-->
+                    <!--<div class="box-header">-->
+                        <!--<h3 class="box-title">Donut Chart</h3>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash; box-body &ndash;&gt;-->
+                    <!--<div class="box-body chart-responsive">-->
+                        <!--<div class="box-body border-radius-none" id="chartDiv"></div>-->
+
+                    <!--</div>-->
+                    <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                <!--</div>-->
                 <!-- /.Custom donnut chart widget-->
 
 
