--- a/polymer-elements/my-element.html
+++ b/polymer-elements/my-element.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/core-ajax/core-ajax.html">
 
-<polymer-element name="my-element" noscript>
+<polymer-element name="my-element">
 
 
   <template>
