--- a/polymer-elements/dc-element.html
+++ b/polymer-elements/dc-element.html
@@ -3,12 +3,14 @@
 
 
 
-<polymer-element name="dc-element" noscript>
+<polymer-element name="dc-element">
 
 
   <template>
+
       <!-- dc style -->
       <link rel="stylesheet" type="text/css" href="../css/dc.css" media="screen" />
+
       <div id="chart"></div>
       <div id="chart2"></div>
 
@@ -67,6 +69,7 @@
                         .x(d3.time.scale().domain([minDate,maxDate]));
 
                 hitslineChart.root()[0][0] = this.$.chart; //we pass explicitly the root div to dc.js
+                this.$.chart.classList.add("dc-chart"); //add the dc-chart to allow dc.js to style the chart
 
                 var yearRingChart   = dc.pieChart("#chart2", "mygroup");
                 yearRingChart
@@ -75,8 +78,10 @@
                         .group(this.yearGroup)
                         .innerRadius(30)
                         .root()[0][0] = this.$.chart2; //we pass explicitly the root div to dc.js
+                this.$.chart2.classList.add("dc-chart"); //add the dc-chart to allow dc.js to style the chart
 
                 dc.renderAll("mygroup");
+//
             }
         });
     </script>
